--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <a href="index.html">
-      <button>首頁</button>
-    </a>
-    <button id="addFlightBtn">新增航班</button>
-  </header>
+<header>
+  <a href="https://qqqq1597.github.io/travle/" class="back-button">
+    <button>返回主頁</button>
+  </a>
+  <a href="https://qqqq1597.github.io/flight/index.html" class="flight-button">
+    <button>航班</button>
+  </a>
+  <button id="addFlightBtn">新增航班</button>
+</header>
 
   <section id="homePage">
     <h1>航班列表</h1>
