--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <label for="departure">起飛時間</label>
         <input type="datetime-local" id="departure" required />
 
+        <label for="arrival">抵達時間</label>
+        <input type="datetime-local" id="arrival" required />
+
         <label for="destination">目的地</label>
         <input type="text" id="destination" required />
 
